employee-management-chart/templates/ingress.yaml
{ { - if .Values.ingress.enabled - } }
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: { { include "employee-management-chart.fullname" . } }
  labels:
    { { - include "employee-management-chart.labels" . | nindent 4 } }
  { { - with .Values.ingress.annotations } }
  annotations:
    { { - toYaml . | nindent 4 } }
  { { - end } }
spec:
  { { - with .Values.ingress.className } }
  ingressClassName: { { . } }
  { { - end } }
  { { - if .Values.ingress.tls } }
  tls:
    { { - range .Values.ingress.tls } }
    - hosts:
        { { - range .hosts } }
        - { { . | quote } }
        { { - end } }
      secretName: { { .secretName } }
    { { - end } }
  { { - end } }
  rules:
    { { - range .Values.ingress.hosts } }
    - host: { { .host | quote } }
      http:
        paths:
          { { - range .paths } }
          - path: { { .path } }
            { { - with .pathType } }
            pathType: { { . } }
            { { - end } }
            backend:
              service:
                name: { { include "employee-management-chart.fullname" $ } }
                port:
                  number: { { $.Values.service.port } }
          { { - end } }
    { { - end } }
  { { - end } }
